# map_annotation

./: .gitignore  01-activate.sh  LICENSE  README.md  boundaries_to_lanes.py  environment.yml  load_connectors.py  process.py  process_connectors.py  pyproject.toml  setup.cfg  test.py  test_transform.py  visualize.py
data/: Crosswalks.gpkg  Crosswalks_b.gpkg  Crosswalks_h.gpkg  Intersections_b.gpkg  Intersections_h.gpkg  Lanes.gpkg  Lanes_b.gpkg  Lanes_h.gpkg  OffRoad.gpkg  Offroad_b.gpkg  Offroad_h.gpkg  lane_connectors_preprocessed.gpkg  lanes_preprocessed.gpkg  polygons_preprocessed.gpkg
data/annotations/: Crosswalks_b.gpkg  Crosswalks_h.gpkg  Intersections_h.gpkg  Lanes_b.gpkg  Lanes_h.gpkg  Offroad_b.gpkg
data/preprocessed/: lanes.gpkg
map_annotation/: Lanes.py  __init__.py  connectors.py  interpolation.py  lane_connectors.py  lanes.py  polygons.py  preprocess.py  road_elements.py  transforms.py  utils.py  visualization.py
src/: Lanes.py  utils.py
streamlit/: make_attribute_templates.py  st_annotate_attributes.py  utils.py
