[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = 'map_annotation'
version = "0.0.1"
authors = [
  { name = "B. Martens", email="b.k.w.martems@student.tudelft.nl" },
  { name = "H. Boekema", email="h.j.boekema@tudelft.nl" }
] 
description = "Map annotation package"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = ""
"Bug Tracker" = ""
